# rkbx-python

./: bridge.py  rekordbox_offset_scanner.py  start_all.bat
data/: library.json
data/lyrics_json/: Дети_Rave_-_Zidane.json  Дети_Rave_-_Новый_год.json
data/lyrics_raw/: Дети_Rave_-_Zidane.lrc  Дети_Rave_-_Новый_год.lrc
src-rust/: Cargo.toml  README.md  main.rs  offsets  offsets.rs
src-rust/src/: osc.rs
src/server/: link-bridge.js
